--- a/resources/css/dashboard.css
+++ b/resources/css/dashboard.css
@@ -80,7 +80,7 @@ hr {
 }
 
 .navbar li a:hover {
-    background-color: var(--main-bg-colour);
+    color: var(--society-red);
 }
 
 .section-title {
