--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -94,6 +94,7 @@
 #title-section {
     margin: 3% 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
